mozliwosc zdefiniowania wlasnego modelu dla kontrolera

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -28,6 +28,7 @@
     universal.page[] = "user"
     universal.page.user.skipCols[] = "id"
     universal.page.user.skipCols[] = "password"
+    universal.page.user.model = "Application_Model_User"
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 [staging : production]
